--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .custom-hover {
+        transition: all 500ms ease;
+    }
+
+    .custom-hover:hover {
+        box-shadow: 0px 10px 12px rgba(0, 100, 238, 0.15), 8px 8px 5px rgba(0, 100, 225, 0.10);
+    }
+}
